--- a/1.구구단/like-button.html
+++ b/1.구구단/like-button.html
@@ -3,32 +3,30 @@
 </head>
 <body>
 <div id="root"></div>
-<script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
-<script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+<script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+<script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+
 <!--<script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>-->
 <!--<script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>-->
-<script>
+<script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+<script type="text/babel">
   'use strict';
 
-  const e = React.createElement;
-
-  class LikeButton extends React.Component {
-    constructor(props) {
-      super(props);
-      this.state = {liked: false};
+  const LikeButton = () => { 
+    const [liked, setLiked] = React.useState(false); // 구조분해
+    // 뭔짓을 하든 , 결국 return 한게 화면이다.
+    if(liked) {
+      return 'You liked this.';
     }
-
-    render() {
-      if (this.state.liked) {
-        return 'You liked this.';
-      }
-
-      return e('button', {onClick: () => this.setState({liked: true})}, 'Like');
-    }
+    return (
+      <button onClick={() => {setLiked(true); }}>Like</button>
+    );
   }
+
 </script>
-<script>
-  ReactDOM.render(e(LikeButton), document.querySelector('#root'));
+<script type="text/babel">
+  // ReactDOM.render(<LikeButton />, document.querySelector('#root')); //React 17버젼 코드
+  ReactDOM.createRoot(document.querySelector('#root')).render(<LikeButton/>); //React 18버젼 코드
 </script>
 </body>
 </html>
