--- a/1.구구단/like-button.html
+++ b/1.구구단/like-button.html
@@ -1,32 +1,85 @@
 <html>
 <head>
+  <meta charset="utf-8" />
+  <title>구구단</title>
+  <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+  
+  <!--<script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>-->
+  <!--<script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>-->
+  <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 </head>
 <body>
 <div id="root"></div>
-<script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-<script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-
-<!--<script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>-->
-<!--<script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>-->
-<script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 <script type="text/babel">
-  'use strict';
+  //constructor, super 안써도 된다.
+        class GuGuDan extends React.Component{
+          state = {
+            first: Math.ceil(Math.random() * 9),
+            second: Math.ceil(Math.random() * 9),
+            value: '',
+            result: '',
+            question: '',
+          };
+        
+//무조건 화살표 함수를 써야된다.
+        onSubmit = (e) => {
+          e.preventDefault();
+          if(parseInt(this.state.value) === this.state.first * this.state.second){
+            this.setState((prevState) =>{
+              return {
+                result: '정답 : '+ prevState.value,
+                // question: this.state.first + ' * ' + this.state.second + " = ",
+                answer: this.state.value,
+                first: Math.ceil(Math.random() * 9),
+                second : Math.ceil(Math.random() * 9),
+                value: '',
+              };
+            });
+            this.input.focus();
+          } else {
+            this.setState({
+              result: '땡',
+              value : '',
+            })
+            this.input.focus();
+          }
+        }
+//(e)아니고 function(e)쓰면 안됨
+        onChange = (e) => {
+          this.setState({ value : e.target.value});
+        }
 
-  const LikeButton = () => { 
-    const [liked, setLiked] = React.useState(false); // 구조분해
-    // 뭔짓을 하든 , 결국 return 한게 화면이다.
-    if(liked) {
-      return 'You liked this.';
-    }
-    return (
-      <button onClick={() => {setLiked(true); }}>Like</button>
-    );
-  }
+        input;
+        render(){
+          //10초 걸리는 작업 long();
+          console.log('렌더링');
+          return (
+            <React.Fragment>
+              <div>{this.state.first} 곱하기 {this.state.second}는?</div>
+              <form onSubmit={this.onSubmit}>
+                <input
+                  ref={(c) => {this.input = c;}}
+                  type="number" 
+                  value={this.state.value} 
+                  onChange={(e) => this.setState({value: e.target.value})}
+                />
+                <button>입력!</button>
+              </form>
+              <div>{this.state.result}</div>
+             
+            </React.Fragment>
+          );
+        }
+      }
+
+
+
 
 </script>
 <script type="text/babel">
   // ReactDOM.render(<LikeButton />, document.querySelector('#root')); //React 17버젼 코드
-  ReactDOM.createRoot(document.querySelector('#root')).render(<LikeButton/>); //React 18버젼 코드
+  ReactDOM.createRoot(document.querySelector('#root')).render(<GuGuDan/>); //React 18버젼 코드
 </script>
 </body>
 </html>
